force-app/main/default/objects/Rate_Card__c/Rate_Card__c.object-meta.xml
<CustomObject>
    <label>Rate Card</label>
    <nameField>
        <label>Rate Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ratecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>