force-app/main/default/objects/Rate_Card__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>65</length>
    <type>Text</type>
</CustomField>