force-app/main/default/objects/Rate_Card__c/fields/Tenure_Max__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Max__c</fullName>
    <label>Tenure Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>