force-app/main/default/objects/Rate_Card__c/fields/Tenure_Min__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Min__c</fullName>
    <label>Tenure Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>